admin дизайн и поиск по имени

--- a/css/admin.css
+++ b/css/admin.css
@@ -12,3 +12,41 @@
     color: #808080;
     font-style: italic;
 }
+
+#gift_name_div {
+    position: fixed;
+    top: 45px;
+    left: 38%;
+    right: 38%;
+    display: block;
+    background-color: rgba(200, 200, 200, 0.5);
+    box-shadow: 0px 0px 4px 1px rgba(100, 100, 150, 0.5);
+    border: 1px ridge gainsboro;
+    border-radius: 7px;
+    padding: 7px;
+}
+#gift_name_div > * {
+    margin: 0;
+    /*padding: 2%;*/
+    /*width: 45%;*/
+}
+
+
+
+.scrollup {
+    width: 47px;
+    height: 49px;
+    position: fixed;
+    bottom: 33px;
+    right: 66px;
+    display: none;
+    text-indent: -9999px;
+    background: url('scroll-top.png') no-repeat;
+    background-color: #44f;
+}
+
+.pageSize-button.active{
+    -webkit-box-shadow: 0px 1px 4px 1px rgba(57, 77, 165, 0.7);
+    -moz-box-shadow: 0px 1px 4px 1px rgba(57, 77, 165, 0.7);
+    box-shadow: 0px 1px 4px 1px rgba(57, 77, 165, 0.7);
+}
