--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,8 @@ body
 
 #page
 {
-	margin-top: 5px;
-	margin-bottom: 5px;
+	/*margin-top: 5px;*/
+	/*margin-bottom: 5px;*/
 	background: white;
 }
 
@@ -32,10 +32,10 @@ body
 
 #footer
 {
-	padding: 10px;
-	margin: 10px 20px;
-	font-size: 0.8em;
-	text-align: center;
+	/*padding: 10px;*/
+	/*margin: 10px 20px;*/
+	/*font-size: 0.8em;*/
+	/*text-align: center;*/
 	/*border-top: 1px solid #C9E0ED;*/
 }
 
