--- a/css/custom.css
+++ b/css/custom.css
@@ -103,20 +103,28 @@ input {display: inline-block}
   /*margin-top: 18px;*/
   margin-left: 31px;
 }
+
 .filter-header {
+  width: 30%;
+  position: absolute;
+  top: 50px;
+  left: 67.5%;
+}
+.filter-header span {
   font-family: Verdana,Helvetica,sans-serif;
   font-size: 18pt;
   display: block;
   text-align: center;
-  margin-top: 40px;
+  /*margin-top: 40px;*/
   color: white;
+
 }
 
-@media (max-width: 820px) {
-  .filter-header {
-    font-size: 16pt;
+@media (max-width: 1180px) {
+  .filter-header span {
+    font-size: 15pt;
     margin-top: 10px;
-    color: #555;
+    /*color: #555;*/
   }
 }
 
