--- a/css/custom.css
+++ b/css/custom.css
@@ -100,21 +100,22 @@ font-weight: bold;
   width: 35%;
   margin: 0 2%;
 }
-#main_logo {
-  /*margin-top: 18px;*/
+/*#main_logo {
+  margin-top: 18px;
   margin-left: 31px;
-}
+}*/
 
 .filter-header {
-  width: 350px;
+  width: 27.5%;
   margin-top: 50px;
   float: left;
-  margin-left: 5%;
+  /*margin-left: 5%;*/
   /*position: absolute;*/
   /*top: 50px;*/
   /*left: 65.5%;*/
 }
 
+/*
 
 @media(max-width: 1240px) {
   .filter-header {
@@ -126,6 +127,7 @@ font-weight: bold;
     margin-left: 0;
   }
 }
+*/
 
 .filter-header span {
   font-family: Verdana,Helvetica,sans-serif;
@@ -134,6 +136,8 @@ font-weight: bold;
   text-align: center;
   /*margin-top: 40px;*/
   color: white;
+  margin: 0px auto;
+  width: 350px;
 }
 
 @media (max-width: 1180px) {
@@ -151,7 +155,7 @@ font-weight: bold;
   background-image: url('./header2000.png');
   /*background-size: 100% 100%;*/
   height: 102px;
-  padding: 20px 0;
+  padding: 20px ;
 }
 
 #footer
@@ -201,9 +205,10 @@ font-weight: bold;
 
 .gift_div {
   width: 20%;
-  padding: 2%;
+  padding: 1%;
   float: left;
   min-width: 100px;
+  max-width: 10vw;
 }
 
 .gift_div:nth-of-type(4n+1) {
@@ -263,7 +268,7 @@ font-weight: bold;
   }
 }
 
-@media(max-width: 660px) {
+@media(max-width: 400px) {
   .gift_div {
     width: 46%;
     padding: 2%;
@@ -341,7 +346,7 @@ font-weight: bold;
   display: block;
   margin-top: 1em;
 }
-@media (max-width: 800px) {
+/*@media (max-width: 800px) {
   .yiiPager .page:nth-of-type(7):after {
     content: "\0020";
     display: block;
@@ -355,7 +360,7 @@ font-weight: bold;
     height: 1em;
   }
 }
-
+*/
 
 #ajax_shadow {
   display: block;
@@ -421,10 +426,11 @@ font-weight: bold;
 }
 
 .filter-side {
-  margin-left: 5%;
+  /*margin-left: 5%;*/
   margin-top: 5%
 }
 
+/*
 @media(max-width: 1240px) {
   .filter-side {
     margin-left: 2%;
@@ -435,6 +441,7 @@ font-weight: bold;
     margin-left: 0;
   }
 }
+*/
 
 .pager-header {
   font-size: 17px;
@@ -446,3 +453,19 @@ ul.yiiPager li.previous.hidden a, ul.yiiPager li.next.hidden a{
   cursor: default;
   color: #aaa;
 }
+
+
+.main-left-part {
+  max-width: 850px
+}
+@media (max-width: 860px) {
+  .main-left-part {
+    max-width: 450px
+  }
+}
+/*
+@media (max-width: 400px) {
+  .main-left-part {
+    max-width: 300px
+  }
+}*/
